--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,103 +4,149 @@ body {
     margin-bottom: 50px;
 
 }
+ul {
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+}
+a {
+    text-decoration: none;
+}
+h1, h2, h3 {
+    margin: 0;
+    padding: 0;
+}
+.container {
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 975px;
+    /* border: solid tomato 2px; */
+}
 nav a {
     color: hsl(0, 0%, 51%);
     }    
 nav a:hover {
     color: black;
 }
-.nav .link {
-    padding: 40px;
-    margin: 50px;
+.nav-list {
+    margin-top: 33px;
+    margin-bottom: 32px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
 }
-hr {
-    margin-top: 50px;
-    border-radius: 50%;
-}
- aside {
-    display: block;
-    text-align: right;
-    padding-top: 30px;
-    padding-bottom: 30px;
+.nav {
+    margin-bottom: 40px;
+    
 }
 .home img {
     display: block;
     margin-right: auto;
     margin-left: auto;
+    margin-bottom: 104px;
 }
 h1 {
     font-size: 43px;
-    margin-left: 150px;
 }
 .home p {
+    margin: 0;
+}
+.about h2 {
+    margin-top: 120px;
+    margin-bottom: 18px;
+}
+.about-list {
+    width: 485px;
+    min-height: 218px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-bottom: 107px;
+}
+.about p {
+    margin-top: 0;
     margin-bottom: 30px;
-    }
+}
 .about, .portfolio {
     background-color: #f6f6f6;
 }
 h2 {
     text-align: center;
-    font-size: 34px;
-    padding-top: 30px;
-    padding-bottom: 30px;
 }
 p {
     text-align: center;
     font-size: 18px;
     font-weight: 200;
 }
-
-.nav, .home, .about, .skills, .portfolio, .contacts {
-    padding-bottom: 30px;
-}
-    
-.skills .list li {
-    display: inline;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin-right: 50px;
-    margin-left: 50px;
+.skills h2 {
+    margin-top: 91px;
+    margin-bottom: 70px;
 }
 .skills p {
-    margin-bottom: 30px;
-    margin-top: 30px;
+    margin-top: 0;
+    margin-bottom: 83px;
+}
+.skills .list {
+    margin-bottom: 110px;
+}
+.skills .list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+
+}
+.portfolio h2 {
+    margin-top: 112px;
+    margin-bottom: 47px;
 }
 
 .portfolio .list img{
     display: block;
     margin-right: auto;
     margin-left: auto;
-    margin-bottom: 30px;
+    margin-bottom: 45px;
 }
 .portfolio .list a {
     display: block;
     text-align: center;
-    margin-bottom: 30px;
+    padding-bottom: 100px;
     color: black;
 }
 .portfolio .list {
     list-style-type: none;
 }
-
+.footer h2 {
+    margin-top: 114px;
+    margin-bottom: 20px;
+}
+.footer p {
+    margin-top: 0;
+    margin-bottom: 30px;
+}
 button {
     display: block;
     margin-right: auto;
     margin-left: auto;
-    margin-bottom: 30px;
+    margin-bottom: 86px;
+    padding: 13px 30px;
+    text-align: center;
     border-radius: 25px;
     color: white;
     background-color: black;
     font-size: 18px;
     width: 200px;
     height: 50px;
- }
+}
 footer img {
     display: block;
     margin-right: auto;
     margin-left: auto;
-    margin-bottom: 30px;
+    margin-bottom: 45px;
 }
 footer p {
     font-size: 14px;
+    margin-bottom: 72px;
 }
